# volcano-coding-switcher

./: .gitignore  Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: build-macos-signed.sh
scripts/gen-ico/: Cargo.toml
scripts/gen-ico/src/: main.rs
scripts/gen-icon/: Cargo.toml
scripts/gen-icon/src/: main.rs
src/: App.tsx  api.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: check_afp.rs
src-tauri/src/: ark.rs  cc_switch_cli.rs  cc_switch_db.rs  cc_switch_proc.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  monitor.rs  sign.rs  state.rs  tray.rs  tray_icon.rs
src/components/: AccountsTab.tsx  BindingsTab.tsx  CcSwitchCard.tsx  CcSwitchTab.tsx  EventLog.tsx  Header.tsx  PolicyTab.tsx  QuickSetupTab.tsx  QuotaCard.tsx  SettingsModal.tsx  UsageRing.tsx
src/state/: useCcStatus.ts  useConfig.ts  useQuota.ts
src/utils/: fmt.ts
